Criando, configurando um arquivo typescript e criando tipagem

--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "bananinha": "node index.js bananinha"
+    "start": "tsc && node ./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Aureana/labecommerce-backend/issues"
   },
-  "homepage": "https://github.com/Aureana/labecommerce-backend#readme"
+  "homepage": "https://github.com/Aureana/labecommerce-backend#readme",
+  "devDependencies": {
+    "typescript": "^4.9.4"
+  }
 }
